tests/invalid/in_dict_wrong_key_type/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 10}
    bad: bool = "1" in d


if __name__ == "__main__":
    run_case()
